fix text-align bai2

--- a/Baitap2/css/style.css
+++ b/Baitap2/css/style.css
@@ -158,6 +158,7 @@ body{
 .color-{
     color: #595959;
     margin-top: 10px;
+    margin: unset;
 }
 
 .box a::before{
